--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./CSS/main.css">
   </head>
   <body>
       <header class="header">
@@ -29,7 +29,7 @@
                   <a class="nav-list-link" href="./index.html">Студія</a>
                 </li>
                 <li class="nav-list-item">
-                  <a class="nav-list-link" href="./pages/Portfolio.html">Портфоліо</a>
+                  <a class="nav-list-link" href="./Portfolio.html">Портфоліо</a>
                 </li>
                 <li class="nav-list-item">
                   <a class="nav-list-link" href="#">Контакти</a>
