--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <title>Portfolio</title>
-    <link rel="stylesheet" href="../CSS/style1.css" />
+    <link rel="stylesheet" href="./CSS/portfolio.css" />
   </head>
   <body>
       <header class="header">
