--- a/Portfolio.html
+++ b/Portfolio.html
@@ -16,12 +16,12 @@
         <div class="header-contanier">
           <nav class="navigation">
             <div class="nav-menu-left">
-              <a class="logo-link" href="../index.html"
+              <a class="logo-link" href="./index.html"
                 ><span class="web">Web</span>Studio</a
               >
               <ul class="nav-list">
                 <li class="nav-list-item">
-                  <a class="nav-list-link" href="../index.html">Студія</a>
+                  <a class="nav-list-link" href="./index.html">Студія</a>
                 </li>
                 <li class="nav-list-item">
                   <a class="nav-list-link" href="./Portfolio.html"
@@ -74,7 +74,7 @@
           <ul class="list-cards">
             <li class="main-list-item">
               <div class="thumb">
-                <img class="main-img" src="../Image/img1.5.jpg" alt="computer" />
+                <img class="main-img" src="./Image/img1.5.jpg" alt="computer" />
               </div>
                 <h3 class="main-title">Технокряк</h3>
                 <p class="main-parag">Веб-сайт</p>
@@ -89,7 +89,7 @@
               <div class="thumb">
                 <img
               class="main-img"
-                src="../Image/img2.5.jpg"
+                src="./Image/img2.5.jpg"
                 alt="basketboll"
               />
               </div>
@@ -104,7 +104,7 @@
             </li>
             <li class="main-list-item">
               <div class="thumb">
-                <img class="main-img" src="../Image/img3.5.jpg" alt="seafood" />
+                <img class="main-img" src="./Image/img3.5.jpg" alt="seafood" />
               </div>
               <h3 class="main-title">Ресторан Seafood</h3>
               <p class="main-parag">Додаток</p>
@@ -117,7 +117,7 @@
             </li>
             <li class="main-list-item">
               <div class="thumb">
-                <img class="main-img" src="../Image/img4.5.jpg" alt="prime" />
+                <img class="main-img" src="./Image/img4.5.jpg" alt="prime" />
               </div>
               <h3 class="main-title">Проєкт Prime</h3>
               <p class="main-parag">Маркетинг</p>
@@ -130,7 +130,7 @@
             </li>
             <li class="main-list-item">
               <div class="thumb">
-                <img class="main-img" src="../Image/img5.5.jpg" alt="box" />
+                <img class="main-img" src="./Image/img5.5.jpg" alt="box" />
               </div>
               <h3 class="main-title">Проєкт Boxes</h3>
               <p class="main-parag">Додаток</p>
@@ -143,7 +143,7 @@
             </li>
             <li class="main-list-item">
               <div class="thumb">
-                <img class="main-img" src="../Image/img6.5.jpg" alt="computer" />
+                <img class="main-img" src="./Image/img6.5.jpg" alt="computer" />
               </div>
               <h3 class="main-title">Inspiration has no Borders</h3>
               <p class="main-parag">Веб-сайт</p>
@@ -156,7 +156,7 @@
             </li>
             <li class="main-list-item">
               <div class="thumb">
-                <img class="main-img" src="../Image/img7.5.jpg" alt="book" />
+                <img class="main-img" src="./Image/img7.5.jpg" alt="book" />
               </div>
               <h3 class="main-title">Видання Limited Edition</h3>
               <p class="main-parag">Дизайн</p>
@@ -169,7 +169,7 @@
             </li>
             <li class="main-list-item">
               <div class="thumb">
-                <img class="main-img" src="../Image/img8.5.jpg" alt="lab" />
+                <img class="main-img" src="./Image/img8.5.jpg" alt="lab" />
               </div>
               <h3 class="main-title">Проєкт LAB</h3>
               <p class="main-parag">Маркетинг</p>
@@ -182,7 +182,7 @@
             </li>
             <li class="main-list-item">
               <div class="thumb">
-                <img class="main-img" src="../Image/img9.5.jpg" alt="computer" />
+                <img class="main-img" src="./Image/img9.5.jpg" alt="computer" />
               </div>
               <h3 class="main-title">Growing Business</h3>
               <p class="main-parag">Додаток</p>
