--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    />
     <title>Portfolio</title>
     <link rel="stylesheet" href="./CSS/portfolio.css" />
   </head>
@@ -88,10 +92,10 @@
             <li class="main-list-item">
               <div class="thumb">
                 <img
-              class="main-img"
+                class="main-img"
                 src="./Image/img2.5.jpg"
                 alt="basketboll"
-              />
+                />
               </div>
               <h3 class="main-title">Постер New Orlean vs Golden Star</h3>
               <p class="main-parag">Дизайн</p>
@@ -100,7 +104,7 @@
                     <h3 class="box-text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
-                </div>
+              </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -113,7 +117,7 @@
                     <h3 class="box-text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
-                </div>
+              </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -126,7 +130,7 @@
                     <h3 class="box-text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
-                </div>
+              </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -139,7 +143,7 @@
                     <h3 class="box-text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
-                </div>
+              </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -152,7 +156,7 @@
                     <h3 class="box-text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
-                </div>
+              </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -165,7 +169,7 @@
                     <h3 class="box-text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
-                </div>
+              </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -178,7 +182,7 @@
                     <h3 class="box-text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
-                </div>
+              </div>
             </li>
             <li class="main-list-item">
               <div class="thumb">
@@ -191,7 +195,7 @@
                     <h3 class="box-text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
-                </div>
+              </div>
             </li>
           </ul>
         </section>
@@ -259,6 +263,5 @@
             </section>
         </div>
       </footer>
-    </div>
   </body>
 </html>
