--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
             вашого бізнесу
           </h1>
           <button class="hero-btn" type="button" data-modal-open>Замовити послугу</button>
-          <div class="backdrop is-hidden" data-modal>
+        </section>
+        <div class="backdrop is-hidden" data-modal>
             <form class="modal">
               <button class="modal-bth-close" data-modal-close>
                 <svg class="close-svg">
@@ -104,8 +105,7 @@
               <p class="modal-text"><input class="modal-checkbox" type="checkbox">Погоджуюся з розсилкою та приймаю <a href="#" class="modal-link"> Умови договору</a></p>
               <button type="submit" class="modal-bth-submit">Відправити</button>
             </form>
-          </div> 
-        </section>
+          </div>
         <!--section advantages-->
         <section class="features contanier" data-aos="fade-left">
           <h2 class="visually-hidden" hidden>Perevagy</h2>
@@ -159,7 +159,7 @@
             </li>
           </ul>
         </section>
-        <section class="electricity contanier" data-aos="fade-right"">
+        <section class="electricity contanier" data-aos="fade-right">
           <h2 class="electricity-parag">Чим ми займаємося</h2>
           <ul class="electricity-list">
             <li class="electricity-list-item">
