--- a/Portfolio.html
+++ b/Portfolio.html
@@ -41,13 +41,13 @@
           <div class="nav-menu-right">
             <a class="contact-link" href="mailto:info@devstudio.com">
               <svg class="icon-contact" width="16" height="12">
-                <use href="./icons/symbol-defs.svg#icon-email"></use>
+                <use href="./Image/icons/symbol-defs.svg#icon-email"></use>
               </svg>
               info@devstudio.com
             </a>
             <a class="contact-link" href="tel:+380961111111">
               <svg class="icon-contact" width="10" height="16">
-                <use href="./icons/symbol-defs.svg#icon-phone"></use>
+                <use href="./Image/icons/symbol-defs.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11
             </a>
@@ -221,28 +221,28 @@
               <li class="footer-list-item">
                 <a class="link-footer-icon" href="#">
                 <svg class="footer-svg">
-                  <use href="./icons/symbol-defs.svg#icon-inst"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-inst"></use>
                 </svg>
               </a>
               </li>
               <li class="footer-list-item">
                 <a class="link-footer-icon" href="#">
                 <svg class="footer-svg">
-                  <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
               </li>
               <li class="footer-list-item">
                 <a class="link-footer-icon" href="#">
                 <svg class="footer-svg">
-                  <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
               </li>
               <li class="footer-list-item">
                 <a class="link-footer-icon" href="#">
                 <svg class="footer-svg">
-                  <use href="./icons/symbol-defs.svg#icon-in"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-in"></use>
                 </svg>
               </a>
               </li>
@@ -256,7 +256,7 @@
                   <button type="submit" class="subscribe-bth">
                     Підписатися
                     <svg class="subscribe-svg">
-                      <use href="./icons/symbol-defs.svg#icon-telegram"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-telegram"></use>
                     </svg>
                   </button>
               </form>
