--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
           <div class="nav-menu-right">
             <a class="contact-link" href="mailto:info@devstudio.com">
               <svg class="icon-contact" width="16" height="12">
-                <use href="./icons/symbol-defs.svg#icon-email"></use>
+                <use href="./Image/icons/symbol-defs.svg#icon-email"></use>
               </svg>
               info@devstudio.com
             </a>
             <a class="contact-link" href="tel:+380961111111">
               <svg class="icon-contact" width="10" height="16">
-                <use href="./icons/symbol-defs.svg#icon-phone"></use>
+                <use href="./Image/icons/symbol-defs.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11
             </a>
@@ -67,7 +67,7 @@
             <form class="modal">
               <button class="modal-bth-close" data-modal-close>
                 <svg class="close-svg">
-                  <use href="./icons/symbol-defs.svg#icon-cross"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-cross"></use>
                 </svg>
               </button>
               <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
@@ -76,7 +76,7 @@
                   <label class="modal-label"> Ім'я
                     <input type="text" class="modal-input" required>
                     <svg class="modal-svg">
-                      <use href="./icons/symbol-defs.svg#icon-person-black"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-person-black"></use>
                     </svg>
                   </label>
                 </li>
@@ -84,7 +84,7 @@
                   <label class="modal-label"> Телефон
                     <input type="tel" class="modal-input" required>
                     <svg class="modal-svg">
-                      <use href="./icons/symbol-defs.svg#icon-phone-black"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-phone-black"></use>
                     </svg>
                   </label>
                 </li>
@@ -92,7 +92,7 @@
                   <label class="modal-label"> Пошта
                     <input type="email" class="modal-input" required>
                     <svg class="modal-svg">
-                      <use href="./icons/symbol-defs.svg#icon-email-black"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-email-black"></use>
                     </svg>
                   </label>
                 </li>
@@ -113,7 +113,7 @@
             <li class="features-list-item">
               <div class="features-cart">
                 <svg class="features-cart-icon" width="70" height="70">
-                  <use href="./icons/symbol-defs.svg#icon-antenna"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -125,7 +125,7 @@
             <li class="features-list-item">
               <div class="features-cart">
                 <svg class="features-cart-icon" width="70" height="70">
-                  <use href="./icons/symbol-defs.svg#icon-clock"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">ПУНКТУАЛЬНІСТЬ</h3>
@@ -137,7 +137,7 @@
             <li class="features-list-item">
               <div class="features-cart">
                 <svg class="features-cart-icon" width="70" height="70">
-                  <use href="./icons/symbol-defs.svg#icon-diagram"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">ПЛАНУВАННЯ</h3>
@@ -148,7 +148,7 @@
             <li class="features-list-item">
               <div class="features-cart">
                 <svg class="features-cart-icon" width="70" height="70">
-                  <use href="./icons/symbol-defs.svg#icon-astronaut"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
@@ -198,22 +198,22 @@
                 <ul class="icons-list">
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-inst"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-inst"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-in"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-in"></use>
                     </svg>
                   </li>
                 </ul>
@@ -229,22 +229,22 @@
                 <ul class="icons-list">
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-inst"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-inst"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-in"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-in"></use>
                     </svg>
                   </li>
                 </ul>
@@ -260,22 +260,22 @@
                 <ul class="icons-list">
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-inst"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-inst"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-in"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-in"></use>
                     </svg>
                   </li>
                 </ul>
@@ -291,22 +291,22 @@
                 <ul class="icons-list">
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-inst"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-inst"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-twitter"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                   </li>
                   <li class="icon-list-item">
                     <svg class="people-icons" width="20" height="20">
-                      <use href="./icons/symbol-defs.svg#icon-in"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-in"></use>
                     </svg>
                   </li>
                 </ul>
@@ -321,42 +321,42 @@
             <li class="clients-list-item">
               <a href="#">
                 <svg class="clients-icon">
-                  <use href="./icons/symbol-defs.svg#icon-Logo1"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-Logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a href="#">
                 <svg class="clients-icon">
-                  <use href="./icons/symbol-defs.svg#icon-Logo2"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-Logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a href="#">
                 <svg class="clients-icon">
-                  <use href="./icons/symbol-defs.svg#icon-Logo3"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-Logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a href="#">
                 <svg class="clients-icon">
-                  <use href="./icons/symbol-defs.svg#icon-Logo4"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a href="#">
                 <svg class="clients-icon">
-                  <use href="./icons/symbol-defs.svg#icon-Logo5"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-Logo5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a href="#">
                 <svg class="clients-icon">
-                  <use href="./icons/symbol-defs.svg#icon-Logo6"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-Logo6"></use>
                 </svg>
               </a>
             </li>
@@ -385,28 +385,28 @@
               <li class="footer-list-item">
                 <a class="link-footer-icon" href="#">
                 <svg class="footer-svg">
-                  <use href="./icons/symbol-defs.svg#icon-inst"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-inst"></use>
                 </svg>
               </a>
               </li>
               <li class="footer-list-item">
                 <a class="link-footer-icon" href="#">
                 <svg class="footer-svg">
-                  <use href="./icons/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
               </li>
               <li class="footer-list-item">
                 <a class="link-footer-icon" href="#">
                 <svg class="footer-svg">
-                  <use href="./icons/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
               </li>
               <li class="footer-list-item">
                 <a class="link-footer-icon" href="#">
                 <svg class="footer-svg">
-                  <use href="./icons/symbol-defs.svg#icon-in"></use>
+                  <use href="./Image/icons/symbol-defs.svg#icon-in"></use>
                 </svg>
               </a>
               </li>
@@ -420,7 +420,7 @@
                   <button type="submit" class="subscribe-bth">
                     Підписатися
                     <svg class="subscribe-svg">
-                      <use href="./icons/symbol-defs.svg#icon-telegram"></use>
+                      <use href="./Image/icons/symbol-defs.svg#icon-telegram"></use>
                     </svg>
                   </button>
               </form>
