--- a/Portfolio.html
+++ b/Portfolio.html
@@ -16,37 +16,35 @@
     <link rel="stylesheet" href="./CSS/portfolio.css" />
   </head>
   <body>
-      <header class="header">
-        <div class="header-contanier">
-          <nav class="navigation">
-            <div class="nav-menu-left">
-              <a class="logo-link" href="./index.html"
-                ><span class="web">Web</span>Studio</a
+      <header class="header__page">
+        <div class="header__contanier">
+          <nav class="header__navigation">
+            <div class="header__menuleft">
+              <a class="logo" href="./index.html"
+                ><span class="logo__web">Web</span>Studio</a
               >
-              <ul class="nav-list">
-                <li class="nav-list-item">
-                  <a class="nav-list-link" href="./index.html">Студія</a>
+              <ul class="header__list">
+                <li class="header__item">
+                  <a class="header__link" href="./index.html">Студія</a>
                 </li>
-                <li class="nav-list-item">
-                  <a class="nav-list-link" href="./Portfolio.html"
-                    >Портфоліо</a
-                  >
+                <li class="header__item">
+                  <a class="header__link" href="./Portfolio.html">Портфоліо</a>
                 </li>
-                <li class="nav-list-item">
-                  <a class="nav-list-link" href="#">Контакти</a>
+                <li class="header__item">
+                  <a class="header__link" href="#">Контакти</a>
                 </li>
               </ul>
             </div>
           </nav>
-          <div class="nav-menu-right">
-            <a class="contact-link" href="mailto:info@devstudio.com">
-              <svg class="icon-contact" width="16" height="12">
+          <div class="header__menuright">
+            <a class="header__contacts__link" href="mailto:info@devstudio.com">
+              <svg class="header-icon" width="16" height="12">
                 <use href="./Image/icons/symbol-defs.svg#icon-email"></use>
               </svg>
               info@devstudio.com
             </a>
-            <a class="contact-link" href="tel:+380961111111">
-              <svg class="icon-contact" width="10" height="16">
+            <a class="header__contacts__link" href="tel:+380961111111">
+              <svg class="header-icon" width="10" height="16">
                 <use href="./Image/icons/symbol-defs.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11
@@ -54,145 +52,147 @@
           </div>
         </div>
       </header>
+      <!-- SECTION MAIN -->
       <main class="main">
-        <section class="main-section-bth">
-          <ul class="main-list-bth">
-            <li class="main-button">
-              <button class="main-button-item">Усі</button>
+        <section class="main__section__bth">
+          <ul class="main__list__bth">
+            <li class="main__button">
+              <button class="main__button__item">Усі</button>
             </li>
-            <li class="main-button">
-              <button class="main-button-item">Веб-сайти</button>
+            <li class="main__button">
+              <button class="main__button__item">Веб-сайти</button>
             </li>
-            <li class="main-button">
-              <button class="main-button-item">Додатки</button>
+            <li class="main__button">
+              <button class="main__button__item">Додатки</button>
             </li>
-            <li class="main-button">
-              <button class="main-button-item">Дизайн</button>
+            <li class="main__button">
+              <button class="main__button__item">Дизайн</button>
             </li>
-            <li class="main-button">
-              <button class="main-button-item">Маркетинг</button>
+            <li class="main__button">
+              <button class="main__button__item">Маркетинг</button>
             </li>
           </ul>
         </section>
-        <section class="main-section-cards">
-          <ul class="list-cards">
-            <li class="main-list-item">
+
+        <section class="section__cards">
+          <ul class="cards__list">
+            <li class="cards__item">
               <div class="thumb">
-                <img class="main-img" src="./Image/img1.5.jpg" alt="computer" />
+                <img class="cards__img" src="./Image/img1.5.jpg" alt="computer" />
               </div>
-                <h3 class="main-title">Технокряк</h3>
-                <p class="main-parag">Веб-сайт</p>
+                <h3 class="main__title">Технокряк</h3>
+                <p class="main__parag">Веб-сайт</p>
                 <div class="box">
                   <div class="overlay">
-                    <h3 class="box-text">
+                    <h3 class="box__text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
                 </div>
             </li>
-            <li class="main-list-item">
+            <li class="cards__item">
               <div class="thumb">
                 <img
-                class="main-img"
+                class="cards__img"
                 src="./Image/img2.5.jpg"
                 alt="basketboll"
                 />
               </div>
-              <h3 class="main-title">Постер New Orlean vs Golden Star</h3>
-              <p class="main-parag">Дизайн</p>
+              <h3 class="main__title">Постер New Orlean vs Golden Star</h3>
+              <p class="main__parag">Дизайн</p>
               <div class="box">
                   <div class="overlay">
-                    <h3 class="box-text">
+                    <h3 class="box__text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
               </div>
             </li>
-            <li class="main-list-item">
+            <li class="cards__item">
               <div class="thumb">
-                <img class="main-img" src="./Image/img3.5.jpg" alt="seafood" />
+                <img class="main__img" src="./Image/img3.5.jpg" alt="seafood" />
               </div>
-              <h3 class="main-title">Ресторан Seafood</h3>
-              <p class="main-parag">Додаток</p>
+                <h3 class="main__title">Ресторан Seafood</h3>
+              <p class="main__parag">Додаток</p>
               <div class="box">
                   <div class="overlay">
-                    <h3 class="box-text">
+                    <h3 class="box__text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
               </div>
             </li>
-            <li class="main-list-item">
+            <li class="cards__item">
               <div class="thumb">
-                <img class="main-img" src="./Image/img4.5.jpg" alt="prime" />
+                <img class="main__img" src="./Image/img4.5.jpg" alt="prime" />
               </div>
-              <h3 class="main-title">Проєкт Prime</h3>
-              <p class="main-parag">Маркетинг</p>
+              <h3 class="main__title">Проєкт Prime</h3>
+              <p class="main__parag">Маркетинг</p>
               <div class="box">
                   <div class="overlay">
-                    <h3 class="box-text">
+                    <h3 class="box__text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
               </div>
             </li>
-            <li class="main-list-item">
+            <li class="cards__item">
               <div class="thumb">
-                <img class="main-img" src="./Image/img5.5.jpg" alt="box" />
+                <img class="main__img" src="./Image/img5.5.jpg" alt="box" />
               </div>
-              <h3 class="main-title">Проєкт Boxes</h3>
-              <p class="main-parag">Додаток</p>
+              <h3 class="main__title">Проєкт Boxes</h3>
+              <p class="main__parag">Додаток</p>
               <div class="box">
                   <div class="overlay">
-                    <h3 class="box-text">
+                    <h3 class="box__text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
               </div>
             </li>
-            <li class="main-list-item">
+            <li class="cards__item">
               <div class="thumb">
-                <img class="main-img" src="./Image/img6.5.jpg" alt="computer" />
+                <img class="main__img" src="./Image/img6.5.jpg" alt="computer" />
               </div>
-              <h3 class="main-title">Inspiration has no Borders</h3>
-              <p class="main-parag">Веб-сайт</p>
+              <h3 class="main__title">Inspiration has no Borders</h3>
+              <p class="main__parag">Веб-сайт</p>
               <div class="box">
                   <div class="overlay">
-                    <h3 class="box-text">
+                    <h3 class="box__text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
               </div>
             </li>
-            <li class="main-list-item">
+            <li class="cards__item">
               <div class="thumb">
-                <img class="main-img" src="./Image/img7.5.jpg" alt="book" />
+                <img class="main__img" src="./Image/img7.5.jpg" alt="book" />
               </div>
-              <h3 class="main-title">Видання Limited Edition</h3>
-              <p class="main-parag">Дизайн</p>
+              <h3 class="main__title">Видання Limited Edition</h3>
+              <p class="main__parag">Дизайн</p>
               <div class="box">
                   <div class="overlay">
-                    <h3 class="box-text">
+                    <h3 class="box__text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
               </div>
             </li>
-            <li class="main-list-item">
+            <li class="cards__item">
               <div class="thumb">
-                <img class="main-img" src="./Image/img8.5.jpg" alt="lab" />
+                <img class="main__img" src="./Image/img8.5.jpg" alt="lab" />
               </div>
-              <h3 class="main-title">Проєкт LAB</h3>
-              <p class="main-parag">Маркетинг</p>
+              <h3 class="main__title">Проєкт LAB</h3>
+              <p class="main__parag">Маркетинг</p>
               <div class="box">
                   <div class="overlay">
-                    <h3 class="box-text">
+                    <h3 class="box__text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
               </div>
             </li>
-            <li class="main-list-item">
+            <li class="cards__item">
               <div class="thumb">
-                <img class="main-img" src="./Image/img9.5.jpg" alt="computer" />
+                <img class="main__img" src="./Image/img9.5.jpg" alt="computer" />
               </div>
-              <h3 class="main-title">Growing Business</h3>
-              <p class="main-parag">Додаток</p>
+              <h3 class="main__title">Growing Business</h3>
+              <p class="main__parag">Додаток</p>
               <div class="box">
                   <div class="overlay">
-                    <h3 class="box-text">
+                    <h3 class="box__text">
                     Ресурс пропонує комплексні<br> пропозиції з різним рівнем<br> функціоналу та сервісів. Все це<br> дозволить відвідувачу отримати<br> вичерпні відомості про компанію<br> чи приватну особу.</h3>
                   </div>
               </div>
@@ -200,48 +200,49 @@
           </ul>
         </section>
       </main>
+      <!-- SECTION FOOTER -->
       <footer class="footer">
-        <div class="footer-content contanier">
-          <section class="footer-contact">
-            <a class="footer-logo-link" href="./index.html"
-              ><span class="web">Web</span>Studio</a
+        <div class="footer__content contanier">
+          <section class="footer__contact">
+            <a class="footer__logo" href="./index.html"
+              ><span class="logo__web">Web</span>Studio</a
             >
-            <p class="footer-parag">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul class="footer-contact-list">
-              <li class="footer-cont">
+            <p class="footer__parag">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="footer__contact__list">
+              <li class="footer__contact__item">
                 <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
               </li>
-              <li class="footer-cont"><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
+              <li class="footer__contact__item"><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
             </ul>
           </section>
 
-          <section class="footer-links">
-            <h3 class="footer-title">приєднуйтесь</h3>
-            <ul class="footer-list-links">
-              <li class="footer-list-item">
-                <a class="link-footer-icon" href="#">
-                <svg class="footer-svg">
-                  <use href="./Image/icons/symbol-defs.svg#icon-inst"></use>
-                </svg>
-              </a>
+          <section class="footer__links">
+            <h3 class="footer__title">приєднуйтесь</h3>
+            <ul class="footer__list__links">
+              <li class="footer__links__item">
+                <a class="footer__link__icon" href="#">
+                  <svg class="footer__svg">
+                    <use href="./Image/icons/symbol-defs.svg#icon-inst"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer-list-item">
-                <a class="link-footer-icon" href="#">
-                <svg class="footer-svg">
+              <li class="footer__links__item">
+                <a class="footer__link__icon" href="#">
+                <svg class="footer__svg">
                   <use href="./Image/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
               </li>
-              <li class="footer-list-item">
-                <a class="link-footer-icon" href="#">
-                <svg class="footer-svg">
+              <li class="footer__links__item">
+                <a class="footer__link__icon" href="#">
+                <svg class="footer__svg">
                   <use href="./Image/icons/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
               </li>
-              <li class="footer-list-item">
-                <a class="link-footer-icon" href="#">
-                <svg class="footer-svg">
+              <li class="footer__links__item">
+                <a class="footer__link__icon" href="#">
+                <svg class="footer__svg">
                   <use href="./Image/icons/symbol-defs.svg#icon-in"></use>
                 </svg>
               </a>
@@ -249,13 +250,13 @@
             </ul>
             </section>
             <section class="subscribe">
-              <form action="#" class="footer-form">
-                <label class="footer-label">Підпишіться на розсилку
-                  <input type="email" class="footer-email" required placeholder="E-mail">
+              <form action="#" class="footer__form">
+                <label class="footer__label">Підпишіться на розсилку
+                  <input type="email" class="footer__email" required placeholder="E-mail">
                 </label>
-                  <button type="submit" class="subscribe-bth">
+                  <button type="submit" class="subscribe__bth">
                     Підписатися
-                    <svg class="subscribe-svg">
+                    <svg class="subscribe__svg">
                       <use href="./Image/icons/symbol-defs.svg#icon-telegram"></use>
                     </svg>
                   </button>
