--- a/Portfolio.html
+++ b/Portfolio.html
@@ -16,35 +16,33 @@
     <link rel="stylesheet" href="./CSS/portfolio.css" />
   </head>
   <body>
-      <header class="header__page">
-        <div class="header__contanier">
-          <nav class="header__navigation">
-            <div class="header__menuleft">
+      <header class="header-page">
+        <div class="header__container">
+          <nav class="navigation">
               <a class="logo" href="./index.html"
                 ><span class="logo__web">Web</span>Studio</a
               >
-              <ul class="header__list">
-                <li class="header__item">
-                  <a class="header__link" href="./index.html">Студія</a>
+              <ul class="header-list">
+                <li class="header-list__item">
+                  <a class="header-list__link" href="./index.html">Студія</a>
                 </li>
-                <li class="header__item">
-                  <a class="header__link" href="./Portfolio.html">Портфоліо</a>
+                <li class="header-list__item">
+                  <a class="header-list__link" href="./Portfolio.html">Портфоліо</a>
                 </li>
-                <li class="header__item">
-                  <a class="header__link" href="#">Контакти</a>
+                <li class="header-list__item">
+                  <a class="header-list__link" href="#">Контакти</a>
                 </li>
               </ul>
-            </div>
           </nav>
-          <div class="header__menuright">
-            <a class="header__contacts__link" href="mailto:info@devstudio.com">
-              <svg class="header-icon" width="16" height="12">
+          <div class="menu-right">
+            <a class="menu-right__link" href="mailto:info@devstudio.com">
+              <svg class="menu-right__icon" width="16" height="12">
                 <use href="./Image/icons/symbol-defs.svg#icon-email"></use>
               </svg>
               info@devstudio.com
             </a>
-            <a class="header__contacts__link" href="tel:+380961111111">
-              <svg class="header-icon" width="10" height="16">
+            <a class="menu-right__link" href="tel:+380961111111">
+              <svg class="menu-right__icon" width="10" height="16">
                 <use href="./Image/icons/symbol-defs.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11
@@ -54,34 +52,34 @@
       </header>
       <!-- SECTION MAIN -->
       <main class="main">
-        <section class="main__section__bth">
-          <ul class="main__list__bth">
-            <li class="main__button">
-              <button class="main__button__item">Усі</button>
+        <section class="section-bth">
+          <ul class="list-bth">
+            <li class="list-bth__item">
+              <button class="list-bth__button">Усі</button>
             </li>
-            <li class="main__button">
-              <button class="main__button__item">Веб-сайти</button>
+            <li class="list-bth__item">
+              <button class="list-bth__button">Веб-сайти</button>
             </li>
-            <li class="main__button">
-              <button class="main__button__item">Додатки</button>
+            <li class="list-bth__item">
+              <button class="list-bth__button">Додатки</button>
             </li>
-            <li class="main__button">
-              <button class="main__button__item">Дизайн</button>
+            <li class="list-bth__item">
+              <button class="list-bth__button">Дизайн</button>
             </li>
-            <li class="main__button">
-              <button class="main__button__item">Маркетинг</button>
+            <li class="list-bth__item">
+              <button class="list-bth__button">Маркетинг</button>
             </li>
           </ul>
         </section>
 
-        <section class="section__cards">
-          <ul class="cards__list">
-            <li class="cards__item">
+        <section class="section-cards">
+          <ul class="cards-list">
+            <li class="cards-list__item">
               <div class="thumb">
-                <img class="cards__img" src="./Image/img1.5.jpg" alt="computer" />
+                <img class="cards-list__img" src="./Image/img1.5.jpg" alt="computer" />
               </div>
-                <h3 class="main__title">Технокряк</h3>
-                <p class="main__parag">Веб-сайт</p>
+                <h3 class="cards-list__title">Технокряк</h3>
+                <p class="cards-list__parag">Веб-сайт</p>
                 <div class="box">
                   <div class="overlay">
                     <h3 class="box__text">
@@ -89,16 +87,16 @@
                   </div>
                 </div>
             </li>
-            <li class="cards__item">
+            <li class="cards-list__item">
               <div class="thumb">
                 <img
-                class="cards__img"
+                class="cards-list__img"
                 src="./Image/img2.5.jpg"
                 alt="basketboll"
                 />
               </div>
-              <h3 class="main__title">Постер New Orlean vs Golden Star</h3>
-              <p class="main__parag">Дизайн</p>
+              <h3 class="cards-list__title">Постер New Orlean vs Golden Star</h3>
+              <p class="cards-list__parag">Дизайн</p>
               <div class="box">
                   <div class="overlay">
                     <h3 class="box__text">
@@ -106,12 +104,12 @@
                   </div>
               </div>
             </li>
-            <li class="cards__item">
+            <li class="cards-list__item">
               <div class="thumb">
-                <img class="main__img" src="./Image/img3.5.jpg" alt="seafood" />
+                <img class="cards-list__img" src="./Image/img3.5.jpg" alt="seafood" />
               </div>
-                <h3 class="main__title">Ресторан Seafood</h3>
-              <p class="main__parag">Додаток</p>
+                <h3 class="cards-list__title">Ресторан Seafood</h3>
+              <p class="cards-list__parag">Додаток</p>
               <div class="box">
                   <div class="overlay">
                     <h3 class="box__text">
@@ -119,12 +117,12 @@
                   </div>
               </div>
             </li>
-            <li class="cards__item">
+            <li class="cards-list__item">
               <div class="thumb">
-                <img class="main__img" src="./Image/img4.5.jpg" alt="prime" />
+                <img class="cards-list__img" src="./Image/img4.5.jpg" alt="prime" />
               </div>
-              <h3 class="main__title">Проєкт Prime</h3>
-              <p class="main__parag">Маркетинг</p>
+              <h3 class="cards-list__title">Проєкт Prime</h3>
+              <p class="cards-list__parag">Маркетинг</p>
               <div class="box">
                   <div class="overlay">
                     <h3 class="box__text">
@@ -132,12 +130,12 @@
                   </div>
               </div>
             </li>
-            <li class="cards__item">
+            <li class="cards-list__item">
               <div class="thumb">
-                <img class="main__img" src="./Image/img5.5.jpg" alt="box" />
+                <img class="cards-list__img" src="./Image/img5.5.jpg" alt="box" />
               </div>
-              <h3 class="main__title">Проєкт Boxes</h3>
-              <p class="main__parag">Додаток</p>
+              <h3 class="cards-list__title">Проєкт Boxes</h3>
+              <p class="cards-list__parag">Додаток</p>
               <div class="box">
                   <div class="overlay">
                     <h3 class="box__text">
@@ -145,12 +143,12 @@
                   </div>
               </div>
             </li>
-            <li class="cards__item">
+            <li class="cards-list__item">
               <div class="thumb">
-                <img class="main__img" src="./Image/img6.5.jpg" alt="computer" />
+                <img class="cards-list__img" src="./Image/img6.5.jpg" alt="computer" />
               </div>
-              <h3 class="main__title">Inspiration has no Borders</h3>
-              <p class="main__parag">Веб-сайт</p>
+              <h3 class="cards-list__title">Inspiration has no Borders</h3>
+              <p class="cards-list__parag">Веб-сайт</p>
               <div class="box">
                   <div class="overlay">
                     <h3 class="box__text">
@@ -158,12 +156,12 @@
                   </div>
               </div>
             </li>
-            <li class="cards__item">
+            <li class="cards-list__item">
               <div class="thumb">
-                <img class="main__img" src="./Image/img7.5.jpg" alt="book" />
+                <img class="cards-list__img" src="./Image/img7.5.jpg" alt="book" />
               </div>
-              <h3 class="main__title">Видання Limited Edition</h3>
-              <p class="main__parag">Дизайн</p>
+              <h3 class="cards-list__title">Видання Limited Edition</h3>
+              <p class="cards-list__parag">Дизайн</p>
               <div class="box">
                   <div class="overlay">
                     <h3 class="box__text">
@@ -171,12 +169,12 @@
                   </div>
               </div>
             </li>
-            <li class="cards__item">
+            <li class="cards-list__item">
               <div class="thumb">
-                <img class="main__img" src="./Image/img8.5.jpg" alt="lab" />
+                <img class="cards-list__img" src="./Image/img8.5.jpg" alt="lab" />
               </div>
-              <h3 class="main__title">Проєкт LAB</h3>
-              <p class="main__parag">Маркетинг</p>
+              <h3 class="cards-list__title">Проєкт LAB</h3>
+              <p class="cards-list__parag">Маркетинг</p>
               <div class="box">
                   <div class="overlay">
                     <h3 class="box__text">
@@ -184,12 +182,12 @@
                   </div>
               </div>
             </li>
-            <li class="cards__item">
+            <li class="cards-list__item">
               <div class="thumb">
-                <img class="main__img" src="./Image/img9.5.jpg" alt="computer" />
+                <img class="cards-list__img" src="./Image/img9.5.jpg" alt="computer" />
               </div>
-              <h3 class="main__title">Growing Business</h3>
-              <p class="main__parag">Додаток</p>
+              <h3 class="cards-list__title">Growing Business</h3>
+              <p class="cards-list__parag">Додаток</p>
               <div class="box">
                   <div class="overlay">
                     <h3 class="box__text">
@@ -202,47 +200,47 @@
       </main>
       <!-- SECTION FOOTER -->
       <footer class="footer">
-        <div class="footer__content contanier">
-          <section class="footer__contact">
+        <div class="footer-content contanier">
+          <section class="footer-contact">
             <a class="footer__logo" href="./index.html"
               ><span class="logo__web">Web</span>Studio</a
             >
-            <p class="footer__parag">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul class="footer__contact__list">
-              <li class="footer__contact__item">
+            <p class="footer-contact__parag">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="contact-list">
+              <li class="contact-list__item">
                 <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
               </li>
-              <li class="footer__contact__item"><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
+              <li class="contact-list__item"><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
             </ul>
           </section>
 
-          <section class="footer__links">
-            <h3 class="footer__title">приєднуйтесь</h3>
-            <ul class="footer__list__links">
-              <li class="footer__links__item">
-                <a class="footer__link__icon" href="#">
-                  <svg class="footer__svg">
+          <section class="footer-links">
+            <h3 class="footer-links__title">приєднуйтесь</h3>
+            <ul class="list-links">
+              <li class="list-links__item">
+                <a class="list-links__icon" href="#">
+                  <svg class="list-links__svg">
                     <use href="./Image/icons/symbol-defs.svg#icon-inst"></use>
                   </svg>
                 </a>
               </li>
-              <li class="footer__links__item">
-                <a class="footer__link__icon" href="#">
-                <svg class="footer__svg">
+              <li class="list-links__item">
+                <a class="list-links__icon" href="#">
+                <svg class="list-links__svg">
                   <use href="./Image/icons/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
               </li>
-              <li class="footer__links__item">
-                <a class="footer__link__icon" href="#">
-                <svg class="footer__svg">
+              <li class="list-links__item">
+                <a class="list-links__icon" href="#">
+                <svg class="list-links__svg">
                   <use href="./Image/icons/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
               </li>
-              <li class="footer__links__item">
-                <a class="footer__link__icon" href="#">
-                <svg class="footer__svg">
+              <li class="list-links__item">
+                <a class="list-links__icon" href="#">
+                <svg class="list-links__svg">
                   <use href="./Image/icons/symbol-defs.svg#icon-in"></use>
                 </svg>
               </a>
@@ -250,13 +248,13 @@
             </ul>
             </section>
             <section class="subscribe">
-              <form action="#" class="footer__form">
-                <label class="footer__label">Підпишіться на розсилку
-                  <input type="email" class="footer__email" required placeholder="E-mail">
+              <form action="#" class="footer-form">
+                <label class="footer-form__label">Підпишіться на розсилку
+                  <input type="email" class="footer-form__email" required placeholder="E-mail">
                 </label>
-                  <button type="submit" class="subscribe__bth">
+                  <button type="submit" class="form-list__bth">
                     Підписатися
-                    <svg class="subscribe__svg">
+                    <svg class="footer-form__svg">
                       <use href="./Image/icons/symbol-defs.svg#icon-telegram"></use>
                     </svg>
                   </button>
