--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="./CSS/main.css">
   </head>
   <body>
-      <header class="header-page">
+      <header class="header">
         <div class="header__container">
           <nav class="navigation">
               <a class="logo" href="./index.html"
