--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           </div>
         </section>
         <!-- SECTION CLIENTS -->
-        <section class="clients contanier">
+        <section class="clients">
           <h3 class="clients__title">Постійні клієнти</h3>
           <ul class="clients-list">
             <li class="clients-list__item">
