--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
         <!-- SECTION FOOTER -->
       </main>
       <footer class="footer">
-        <div class="footer-content contanier">
+        <div class="footer-content">
           <section class="footer-contact">
             <a class="footer__logo" href="./index.html"
               ><span class="logo__web">Web</span>Studio</a
