--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                   </label>
                 </li>
               </ul>
-              <p class="hero-modal__text"><input class="hero-modal__checkbox" type="checkbox">Погоджуюся з розсилкою та приймаю <a href="#" class="hero-modal__link"> Умови договору</a></p>
+              <p class="hero-modal__text"><input class="hero-modal__checkbox" type="checkbox">Погоджуюся з розсилкою та приймаю
+                 <a href="#" class="hero-modal__link"> Умови договору</a></p>
               <button type="submit" class="hero-modal__submit">Відправити</button>
             </form>
           </div>
