--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./CSS/main.css">
   </head>
   <body>
+    <div class="contanier">
       <header class="header">
         <div class="header__container">
           <nav class="navigation">
@@ -51,7 +52,7 @@
           </div>
         </div>
       </header>
-
+    </div>
       <main>
         <!--Section hero-->
         <section data-aos="zoom-in" class="hero">
@@ -106,6 +107,7 @@
             </form>
           </div>
         <!--SECTION FEATURES-->
+      <div class="contanier">
         <section class="features contanier" data-aos="fade-left">
           <h2 class="visually__hidden" hidden>Perevagy</h2>
           <ul class="features-list">
@@ -158,7 +160,9 @@
             </li>
           </ul>
         </section>
+      </div>
         <!-- SECTION ELECTRICITY -->
+      <div class="contanier">
         <section class="electricity contanier" data-aos="fade-right">
           <h2 class="electricity__title">Чим ми займаємося</h2>
           <ul class="electricity-list">
@@ -182,9 +186,10 @@
             </li>
           </ul>
         </section>
+      </div>
         <!-- SECTION PEOPLE -->
+      <div class="contanier">
         <section class="people">
-          
             <h2 class="people__title">Наша команда</h2>
             <ul class="people-list">
               <li class="people-list__item">
@@ -314,117 +319,122 @@
             </ul>
           
         </section>
+      </div>
         <!-- SECTION CLIENTS -->
-        <section class="clients">
-          <h3 class="clients__title">Постійні клієнти</h3>
-          <ul class="clients-list">
-            <li class="clients-list__item">
-              <a href="#">
-                <svg class="clients-list__icon">
-                  <use href="./Image/icons/symbol-defs.svg#icon-Logo1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="clients-list__item">
-              <a href="#">
-                <svg class="clients-list__icon">
-                  <use href="./Image/icons/symbol-defs.svg#icon-Logo2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="clients-list__item">
-              <a href="#">
-                <svg class="clients-list__icon">
-                  <use href="./Image/icons/symbol-defs.svg#icon-Logo3"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="clients-list__item">
-              <a href="#">
-                <svg class="clients-list__icon">
-                  <use href="./Image/icons/symbol-defs.svg#icon-Logo4"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="clients-list__item">
-              <a href="#">
-                <svg class="clients-list__icon">
-                  <use href="./Image/icons/symbol-defs.svg#icon-Logo5"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="clients-list__item">
-              <a href="#">
-                <svg class="clients-list__icon">
-                  <use href="./Image/icons/symbol-defs.svg#icon-Logo6"></use>
-                </svg>
-              </a>
-            </li> 
-          </ul>
-        </section>
-        <!-- SECTION FOOTER -->
-      </main>
-      <footer class="footer">
-        <div class="footer-content">
-          <section class="footer-contact">
-            <a class="footer__logo" href="./index.html"
-              ><span class="logo__web">Web</span>Studio</a
-            >
-            <p class="footer-contact__parag">м. Київ, пр-т Лесі Українки, 26</p>
-            <ul class="contact-list">
-              <li class="contact-list__item">
-                <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
-              </li>
-              <li class="contact-list__item"><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
-            </ul>
-          </section>
-
-          <section class="footer-links">
-            <h3 class="footer-links__title">приєднуйтесь</h3>
-            <ul class="list-links">
-              <li class="list-links__item">
-                <a class="list-links__icon" href="#">
-                  <svg class="list-links__svg">
-                    <use href="./Image/icons/symbol-defs.svg#icon-inst"></use>
+        <div class="contanier">
+          <section class="clients">
+            <h3 class="clients__title">Постійні клієнти</h3>
+            <ul class="clients-list">
+              <li class="clients-list__item">
+                <a href="#">
+                  <svg class="clients-list__icon">
+                    <use href="./Image/icons/symbol-defs.svg#icon-Logo1"></use>
                   </svg>
                 </a>
               </li>
-              <li class="list-links__item">
-                <a class="list-links__icon" href="#">
-                <svg class="list-links__svg">
-                  <use href="./Image/icons/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
+              <li class="clients-list__item">
+                <a href="#">
+                  <svg class="clients-list__icon">
+                    <use href="./Image/icons/symbol-defs.svg#icon-Logo2"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="list-links__item">
-                <a class="list-links__icon" href="#">
-                <svg class="list-links__svg">
-                  <use href="./Image/icons/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
+              <li class="clients-list__item">
+                <a href="#">
+                  <svg class="clients-list__icon">
+                    <use href="./Image/icons/symbol-defs.svg#icon-Logo3"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="list-links__item">
-                <a class="list-links__icon" href="#">
-                <svg class="list-links__svg">
-                  <use href="./Image/icons/symbol-defs.svg#icon-in"></use>
-                </svg>
-              </a>
+              <li class="clients-list__item">
+                <a href="#">
+                  <svg class="clients-list__icon">
+                    <use href="./Image/icons/symbol-defs.svg#icon-Logo4"></use>
+                  </svg>
+                </a>
               </li>
+              <li class="clients-list__item">
+                <a href="#">
+                  <svg class="clients-list__icon">
+                    <use href="./Image/icons/symbol-defs.svg#icon-Logo5"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="clients-list__item">
+                <a href="#">
+                  <svg class="clients-list__icon">
+                    <use href="./Image/icons/symbol-defs.svg#icon-Logo6"></use>
+                  </svg>
+                </a>
+              </li> 
             </ul>
+          </section>
+        </div>
+        <!-- SECTION FOOTER -->
+      </main>
+      <footer class="footer">
+        <div class="contanier">
+          <div class="footer-content">
+            <section class="footer-contact">
+              <a class="footer__logo" href="./index.html"
+                ><span class="logo__web">Web</span>Studio</a
+              >
+              <p class="footer-contact__parag">м. Київ, пр-т Лесі Українки, 26</p>
+              <ul class="contact-list">
+                <li class="contact-list__item">
+                  <a href="mailto:info@devstudio.com"> info@devstudio.com </a>
+                </li>
+                <li class="contact-list__item"><a href="tel:+380961111111"> +38 096 111 11 11 </a></li>
+              </ul>
             </section>
-            <section class="subscribe">
-              <form action="#" class="footer-form">
-                <label class="footer-form__label">Підпишіться на розсилку
-                  <input type="email" class="footer-form__email" required placeholder="E-mail">
-                </label>
-                  <button type="submit" class="form-list__bth">
-                    Підписатися
-                    <svg class="footer-form__svg">
-                      <use href="./Image/icons/symbol-defs.svg#icon-telegram"></use>
+
+            <section class="footer-links">
+              <h3 class="footer-links__title">приєднуйтесь</h3>
+              <ul class="list-links">
+                <li class="list-links__item">
+                  <a class="list-links__icon" href="#">
+                    <svg class="list-links__svg">
+                      <use href="./Image/icons/symbol-defs.svg#icon-inst"></use>
                     </svg>
-                  </button>
-              </form>
-            </section>
+                  </a>
+                </li>
+                <li class="list-links__item">
+                  <a class="list-links__icon" href="#">
+                  <svg class="list-links__svg">
+                    <use href="./Image/icons/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                </li>
+                <li class="list-links__item">
+                  <a class="list-links__icon" href="#">
+                  <svg class="list-links__svg">
+                    <use href="./Image/icons/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                </li>
+                <li class="list-links__item">
+                  <a class="list-links__icon" href="#">
+                  <svg class="list-links__svg">
+                    <use href="./Image/icons/symbol-defs.svg#icon-in"></use>
+                  </svg>
+                </a>
+                </li>
+              </ul>
+              </section>
+              <section class="subscribe">
+                <form action="#" class="footer-form">
+                  <label class="footer-form__label">Підпишіться на розсилку
+                    <input type="email" class="footer-form__email" required placeholder="E-mail">
+                  </label>
+                    <button type="submit" class="form-list__bth">
+                      Підписатися
+                      <svg class="footer-form__svg">
+                        <use href="./Image/icons/symbol-defs.svg#icon-telegram"></use>
+                      </svg>
+                    </button>
+                </form>
+              </section>
+          </div>
         </div>
       </footer>
 
