--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
               <a class="logo" href="./index.html"
                 ><span class="logo__web">Web</span>Studio</a
               >
+              <svg class="navigation__svg">
+                <use href="./Image/icons/symbol-defs.svg#icon-menuheader"></use>
+              </svg>
               <ul class="header-list">
                 <li class="header-list__item">
                   <a class="header-list__link" href="./index.html">Студія</a>
